apps/media/tautulli/service.yaml
---
# Source: tautulli/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/instance: tautulli
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  ports:
    - port: 8181
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/instance: tautulli
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
---
