apps/media/tautulli/ingress.yaml
---
# Source: tautulli/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  labels:
    app: tautulli
    part-of: media
  annotations:
    nginx.ingress.kubernetes.io/auth-url: |-
      http://ak-outpost-nginx-ingress.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    # If you're using domain-level auth, use the authentication URL instead of the application URL
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://$host/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx
  rules:
    - host: "tautulli.home.8none1.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  number: 8181
  tls:
    - hosts:
        - tautulli.home.8none1.com
      secretName: tautulli-ingress-tls
