apps/media/tautulli/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/instance: tautulli
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tautulli.home.8none1.com
    external-dns.alpha.kubernetes.io/target: traefik.srv.8none1.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.home.8none1.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: tautulli
          port: http
      middlewares:
        - name: authentik-forward-auth
  tls:
    secretName: tautulli-ingress-tls
